--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 cffi==1.14.0
+coloredlogs==14.0
 cryptography==2.9.2
+humanfriendly==8.2
 pycparser==2.20
+PyYAML==5.3.1
 six==1.15.0
 u-msgpack-python==2.6.0
