--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 cffi==1.14.1
 cryptography==3.0
-msgpack-python==0.5.6
+msgpack==1.0.0
 pycparser==2.20
 PyYAML==5.3.1
 six==1.15.0
-umsgpack==0.1.0
